<resources>
    <string name="app_name">EX-KER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="merhaba">Merhaba</string>
    <string name="kullaniciIsmi" />
    <string name="harcamaniz">Harcamanız</string>
    <string name="harcama_tutari">0</string>
    <string name="tl">TL</string>
    <string name="sterlin">STERLIN</string>
    <string name="euro">EURO</string>
    <string name="dolar">DOLAR</string>
    <string name="ekle">Ekle</string>
    <string name="expense_image_icon">Expense Image Icon</string>
    <string name="kira">Kira</string>
    <string name="ba_l_k">Başlık</string>
    <string name="baslik">Başlık</string>
    <string name="fiyat_tl">0 TL</string>
    <string name="isim_degistir">İsim Değiştir</string>
    <string name="isminizi_giriniz">İsminizi Giriniz</string>
    <string name="belirtmek_istemiyorum">Belirtmek İstemiyorum</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="kaydet">Kaydet</string>
    <string name="harcama_ekle">Harcama Ekle</string>
    <string name="aciklama">Açıklama</string>
    <string name="harcama">Harcama</string>
    <string name="fatura">Fatura</string>
    <string name="diger">Diğer (Alışveriş vb.)</string>
    <string name="detay">Detay</string>
    <string name="sil">SİL</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="next">Next</string>
    <string name="ileri">ileri</string>
    <string name="bitir">Bitir</string>
    <string name="first_screen_text">Artık karışıklılığa son deme vakti!</string>
    <string name="first_screen_title">Karşınızda Expense Tracker Uygulaması</string>
    <string name="second_screen_title">Kolayca Kategorilendir</string>
    <string name="second_screen_text">Harcamalarınızı kategorileyerek daha kolay takip edin!</string>
    <string name="third_screen_title">Farklı Para Birimleriyle Takip Et</string>
    <string name="third_screen_text">Harcamalarınızı TL, Dolar, Euro, Sterlin para birimleriyle sürekli güncellenen kurla takip edin!</string>
    <string name="full">full</string>
</resources>