<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddExpenseFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textAddedExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        android:enabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harcama_ekle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputExpenseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textAddedExpense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        android:hint="@string/aciklama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/primaryColor"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputExpensePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputExpenseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        android:hint="@string/harcama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/primaryColor"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:buttonTint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="@+id/inputExpensePrice"
        app:layout_constraintTop_toBottomOf="@+id/inputExpensePrice">

        <RadioButton
            android:id="@+id/radioButtonReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fatura"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/kira"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/diger"
            android:textSize="15sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:buttonTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupExpense">

        <RadioButton
            android:id="@+id/radioButtonTl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tl"
            android:layout_marginHorizontal="4dp"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonSterlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sterlin"
            android:layout_marginHorizontal="4dp"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:layout_marginHorizontal="4dp"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButtonDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dolar"
            android:layout_marginHorizontal="4dp"
            android:textSize="15sp" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buttonAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupCurrency"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/ekle"
        android:textColor="@color/secondaryTextColor"
        android:backgroundTint="@color/primaryColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>