<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.screens.ThirdScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewSplash"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        app:lottie_rawRes="@raw/currency_type"/>

    <TextView
        android:id="@+id/textviewThirdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="@color/secondaryColor"
        style="@style/Widget.MaterialComponents.TextView"
        android:shadowColor="@color/primaryColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"
        app:layout_constraintTop_toBottomOf="@id/animationViewSplash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/third_screen_title"
        android:fontFamily="@font/indie_flower_regular"/>
    <TextView
        android:id="@+id/textviewThirdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/primaryDarkColor"
        style="@style/Widget.MaterialComponents.TextView"
        android:shadowColor="@color/secondaryColor"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@id/textviewThirdTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/third_screen_text"
        android:fontFamily="@font/indie_flower_regular"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textviewThirdText">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/full"
            android:src="@drawable/circle_full"
            app:tint="@color/secondaryLightColor" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/full"
            android:src="@drawable/circle_full"
            app:tint="@color/secondaryLightColor" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/full"
            android:src="@drawable/circle_full"
            app:tint="@color/secondaryLightColor" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bitir"
        app:icon="@drawable/ic_baseline_navigate_next_24"
        app:iconGravity="end"
        app:iconPadding="0dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textSize="20sp"
        android:layout_margin="20dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>